# ruff-example-github

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ruff_example_github/: greeting.py  main.py
